# case

./: CMakeLists.txt  SkinNames.py
assets-fx/: fxconv-metadata.txt
src/: cases.c  cases.h  main.c
